[package]
name = "mcp-rdw-server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
mcp-sdk = "0.1.0" # Hypothetische SDK of we implementeren stdio direct
